@@ -17,6 +17,9 @@
           TimeSensor::processSet_enabled. Route from a TimeSensor's
           isActive to its set_enabled was causing an infinite loop.
 
+        * src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp: Source
+          formatting changes.
+
 2002-10-17  Braden McDaniel  <braden@endoframe.com>
 
         * src/openvrml/OpenVRML/vrml97node.cpp,
